fix(dashboard-app): profile pager flicker (#203)

--- a/sample-applications/blazor-dashboard/BlazorDashboard/sass/_layout.scss
+++ b/sample-applications/blazor-dashboard/BlazorDashboard/sass/_layout.scss
@@ -91,6 +91,8 @@ kendo-tabstrip {
 
     hr {
         border: 0;
+        height: 1px;
+        background-color: currentColor;
     }
 
     .h4 {
